syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";

option csharp_namespace = "Itmo.CSharpMicroservices.Lab3.Grpc";

package order_service;

service GrpcOrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);

  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  
  rpc AddProductsToOrder(AddProductsRequest) returns (OrderResponse);
  
  rpc RemoveProductsFromOrder(RemoveProductsRequest) returns (OrderResponse);
  
  rpc ChangeOrderStatus(ChangeOrderStatusRequest) returns (OrderResponse);
  
  rpc GetOrderHistories(GetOrderHistoryRequest) returns (GetOrderHistoryResponse);
}

message CreateOrderRequest {
  string created_by = 1;
  google.protobuf.Timestamp created_at = 2;
}

message GetOrderRequest {
  int64 order_id = 1;
}

message AddProductsRequest {
  int64 order_id = 1;
  repeated int64 product_ids = 2;
}

message RemoveProductsRequest {
  int64 order_id = 1;
  repeated int64 product_ids = 2;
}

message ChangeOrderStatusRequest {
  int64 order_id = 1;
  string new_status = 2;
}

message GetOrderHistoryRequest {
  int64 cursor = 1;
  int32 page_size = 2;
  int64 order_id = 3;
  optional string kind = 4;
}

message OrderItemMessage {
  int64 product_id = 1;
  string name = 2;
  common.DecimalValue price = 3;
  int32 quantity = 4;
  bool is_deleted = 5;
}

message OrderResponse {
  int64 id = 1;
  string state = 2;
  google.protobuf.Timestamp created_at = 3;
  string created_by = 4;
  repeated OrderItemMessage items = 5;
}

message OrderHistoryItem {
  int64 history_id = 1;
  int64 order_id = 2;
  string kind = 3;
  google.protobuf.Timestamp created_at = 4;
  
  oneof payload {
    ProductAddedPayload product_added = 5;
    ProductRemovedPayload product_removed = 6;
    StateChangedPayload state_changed = 7;
    OrderCreatedPayload order_created = 8;
  }
}

message ProductAddedPayload {
  repeated int64 product_id = 1;
  repeated int32 quantity = 2;
}

message ProductRemovedPayload {
  repeated int64 product_id = 1;
  repeated int32 quantity = 2;
}

message OrderCreatedPayload {
  string CreatedBy = 1;
  google.protobuf.Timestamp created_at = 2;
}

message StateChangedPayload {
  string old_state = 1;
  string new_state = 2;
}

message GetOrderHistoryResponse {
  repeated OrderHistoryItem items = 1;
}
